--- a/theme/thr/views/help/mail-card.hbs
+++ b/theme/thr/views/help/mail-card.hbs
@@ -1,3 +1,2 @@
 <p>Manche Anliegen brauchen mehr Möglichkeiten, als die Felder des Kontaktformulars zulassen. Schreib uns eine E-Mail, wenn du mit uns ins Gespräch kommen willst.<br />
-Die richtigen Kontaktpersonen für alle Situationen findest du im <a href="http://localhost:3100/help/faq/people">Ansprechpartner-Bereich</a>.</p>
-
+Die richtigen Kontaktpersonen für alle Situationen findest du im <a href="/help/faq/people">Ansprechpartner-Bereich</a>.</p>
