--- a/views/firstLogin/sections/thanks.hbs
+++ b/views/firstLogin/sections/thanks.hbs
@@ -11,36 +11,7 @@
             </div>
         </div>
         <div id="information">
-            {{#ifeq roleName 'Schüler'}}
-                <div class="row mt-3">
-                    <div class="col-xs-4 col-md-3">
-                        <img src="/images/firstLogin/welcome-1-student.svg" alt="Online-Fortbildung">
-                    </div>
-                    <div class="col-xs-8 col-md-9">
-                        Nun kannst du von deinen Lehrkräften in Kurse eingeladen werden und dort auf Unterrichtsmaterialien und Aufgaben zugreifen.
-                        Du hast auch einen eigenen Dateibereich, wo du wichtige Dokumente und Ordner ablegen kannst.
-                        Viel Spaß beim Erkunden! 
-                    </div>
-                </div>
-            {{/ifeq}}
-            {{#ifeq roleName 'Lehrer'}}
-                <div class="row mt-3">
-                    <div class="col-xs-4 col-md-3">
-                        <img src="/images/firstLogin/welcome-1-fobi.svg" alt="Online-Fortbildung">
-                    </div>
-                    <div class="col-xs-8 col-md-9">
-                        <p>
-                            Was kann die {{@root.theme.short_title}} eigentlich?
-                            Und wie kann ich meinen Unterricht damit organisieren, gestalten und durchführen?
-                            Besuche unsere <b>Online-Fortbildung</b> für anschauliche und praxisnahe Videos und finde es heraus! 
-                        </p>
-                        <div class="text-xs-right">
-                            <a class="btn btn-warning" target="_blank" rel="noopener noreferrer" href="https://mooc.house/courses/schulcloud2019">Hier gehts zur Fortbildung</a>
-                        </div>
-                    </div>
-                </div>
-            {{/ifeq}}
-            {{#ifeq roleName 'Administrator'}}
+            {{#inArray 'administrator' roleNames}}
                 <div class="row mt-3">
                     <div class="col-xs-4 col-md-3">
                         <img src="/images/firstLogin/welcome-1-fobi.svg" alt="Online-Fortbildung">
@@ -56,7 +27,39 @@
                         </div>
                     </div>
                 </div>
-            {{/ifeq}}
+            {{else}}
+                {{#inArray 'teacher' ../roleNames}}
+                    <div class="row mt-3">
+                        <div class="col-xs-4 col-md-3">
+                            <img src="/images/firstLogin/welcome-1-fobi.svg" alt="Online-Fortbildung">
+                        </div>
+                        <div class="col-xs-8 col-md-9">
+                            <p>
+                                Was kann die {{@root.theme.short_title}} eigentlich?
+                                Und wie kann ich meinen Unterricht damit organisieren, gestalten und durchführen?
+                                Besuche unsere <b>Online-Fortbildung</b> für anschauliche und praxisnahe Videos und finde es heraus! 
+                            </p>
+                            <div class="text-xs-right">
+                                <a class="btn btn-warning" target="_blank" rel="noopener noreferrer" href="https://mooc.house/courses/schulcloud2019">Hier gehts zur Fortbildung</a>
+                            </div>
+                        </div>
+                    </div>
+                {{else}}
+                    {{#inArray 'student' ../roleNames}}
+                        <div class="row mt-3">
+                            <div class="col-xs-4 col-md-3">
+                                <img src="/images/firstLogin/welcome-1-student.svg" alt="Online-Fortbildung">
+                            </div>
+                            <div class="col-xs-8 col-md-9">
+                                Nun kannst du von deinen Lehrkräften in Kurse eingeladen werden und dort auf Unterrichtsmaterialien und Aufgaben zugreifen.
+                                Du hast auch einen eigenen Dateibereich, wo du wichtige Dokumente und Ordner ablegen kannst.
+                                Viel Spaß beim Erkunden! 
+                            </div>
+                        </div>
+                    {{/inArray}}
+                {{/inArray}}
+            {{/inArray}}
+            
             <div class="row mt-2">
                 <div class="col-xs-4 col-md-3">
                     <img src="/images/firstLogin/welcome-2-help.svg" alt="Help">
@@ -73,15 +76,17 @@
             </div>
             <div class="text-xs-right mt-2 mb-3">
                 <a class="btn btn-secondary mr-2" data-testid='btn_schul-cloud_erkunden' href="/">Sofort loslegen</a>
-                {{#ifeq roleName 'Schüler'}}
-                    <a class="btn btn-primary" href="/help/confluence/40304731">Erste Schritte anschauen</a>
-                {{/ifeq}}
-                {{#ifeq roleName 'Lehrer'}}
-                    <a class="btn btn-primary" href="/help/confluence/40304726">Erste Schritte anschauen</a>
-                {{/ifeq}}
-                {{#ifeq roleName 'Administrator'}}
+                {{#inArray 'administrator' roleNames}}
                     <a class="btn btn-primary" href="/help/confluence/40304667">Erste Schritte anschauen</a>
-                {{/ifeq}}
+                {{else}}
+                    {{#inArray 'teacher' ../roleNames}}
+                        <a class="btn btn-primary" href="/help/confluence/40304726">Erste Schritte anschauen</a>
+                    {{else}}
+                        {{#inArray 'student' ../roleNames}}
+                            <a class="btn btn-primary" href="/help/confluence/40304731">Erste Schritte anschauen</a>
+                        {{/inArray}}
+                    {{/inArray}}
+                {{/inArray}}
             </div>
         </div>
     </div>
